# connte

./: MikroTikMonitorThread.py  README.md  dev.sh  monitor.py  package-lock.json  package.json  pyproject.toml  run.py
attached_assets/: Pasted-error-no-unused-vars-loadPageData-is-never-used-home-runner-work-mik-moni-demo-mik-moni-1743491960627.txt  Pasted-import-sys-import-librouteros-from-PyQt5-QtCore-import-QThread-pyqtSignal-Qt-from-PyQt5-QtGui-i-1743490354755.txt  Pasted-import-sys-import-time-from-collections-import-deque-from-PyQt5-QtCore-import-QAbstractTableModel-1743495262652.txt  Pasted-import-sys-import-time-import-logging-from-functools-import-wraps-from-librouteros-import-connec-1743495323540.txt  Pasted-import-websockets-import-asyncio-from-async-timeout-import-timeout-import-logging-class-MikroT-1743495381627.txt
client/src/: App.tsx
client/src/components/metrics/: NetworkStatus.tsx  ResourceChart.tsx
client/src/hooks/: use-auth.tsx
client/src/lib/: websocket.ts
client/src/pages/: auth-page.tsx  config.tsx  dashboard.tsx  devices.tsx  logs.tsx  terminal.tsx
mik-moni-demo/: app.py  config.json  current_logs_page.html  mac_vendors_cache.json  mikrotik.py
mik-moni-demo/static/js/: dashboard.js  interface-details.js  interfaces.js  logs.js  utils.js  webapi.js
mik-moni-demo/templates/: base.html  dashboard.html  interfaces.html
server/: auth.ts  email.ts  routes.ts  storage.ts
shared/: schema.ts
