[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-sqlalchemy==3.0.5",
    "flask==2.3.3",
    "psycopg2-binary==2.9.7",
    "flask-socketio>=5.5.1",
    "apscheduler==3.10.1",
    "email-validator==2.0.0",
    "gunicorn==21.2.0",
    "routeros-api==0.17.0",
    "requests==2.31.0",
    "python-dateutil>=2.9.0.post0",
]
